next set of optimizations ready